Stage4/greeter.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: greeter
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 8080
    targetPort: 8080
