Stage4/greeter-allPass-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 0
      route:
        - destination:
            host: server
