Stage4/greeter-vs-chaos-1pct.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 1
      route:
        - destination:
            host: server
