Stage4/greeter-vs-route-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
    - match:
        - headers:
            x-dark-launch:
              exact: "v2"
      route:
        - destination:
            host: server
            subset: version-v2
    - route:
        - destination:
            host: server
            subset: version-v1
