Stage4/greeter-vs-route-justV1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server
spec:
  hosts:
    - server
  http:
    - route:
        - destination:
            host: server
            subset: version-v1
